--- a/Spike Launch 1.1/Packages/manifest.json
+++ b/Spike Launch 1.1/Packages/manifest.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
-    "com.unity.adaptiveperformance": "4.0.1",
-    "com.unity.adaptiveperformance.samsung.android": "4.0.2",
+    "com.unity.adaptiveperformance.google.android": "1.2.0",
+    "com.unity.adaptiveperformance.samsung.android": "5.0.0",
     "com.unity.ads.ios-support": "1.0.0",
     "com.unity.ai.navigation": "1.1.3",
     "com.unity.collab-proxy": "2.0.4",
@@ -14,7 +14,6 @@
     "com.unity.inputsystem": "1.5.1",
     "com.unity.services.authentication": "2.4.0",
     "com.unity.services.levelplay": "1.0.0",
-    "com.unity.shadergraph": "14.0.7",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.4",
